# bwp

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json
apps/api/: .env.example  pyproject.toml  seed.py
apps/api/alembic/: env.py
apps/api/app/: config.py  database.py  gdrive_sync.py  llm_settings.py  main.py  runtime_mode.py
apps/api/evals/: action_loop_eval_set.json  confidence_collapse_eval_set.json  duplicate_action_eval_set.json  full_loop_eval_set.json  graph_retrieval_eval_set.json  grounding_eval_set.json  latency_budget_eval_set.json  local_loop_eval_set.json  local_provider_comparison_eval_set.json  metadata_filter_eval_set.json  no_progress_loop_eval_set.json  page_aware_eval_set.json  planner_loop_eval_set.json  query_rewrite_eval_set.json  reflection_eval_set.json  resume_recovery_eval_set.json  retrieval_eval_set.json  run_v050_evals.py  tool_denial_loop_eval_set.json  v050_live_action_eval_set.json
apps/api/scratch/: cleanup_maroon.py
apps/api/scripts/: report_learning_progress.py  report_memory_usage.py  report_preview_conversion.py  report_preview_usage.py
apps/api/tests/: conftest.py  evals.json  test_action_approval_service.py  test_action_audit_log_service.py  test_action_capability_audit.py  test_action_contract_validator.py  test_action_dispatcher.py  test_action_execution_approval_gate.py  test_action_execution_service.py  test_action_lifecycle_transitions.py  test_action_metrics_router.py  test_action_observability_service.py  test_action_planner.py  test_action_policy_registry.py  test_action_registry.py  (+133 more)
(+862 files in other folders)
